--- a/mission-03/components/header/index.html
+++ b/mission-03/components/header/index.html
@@ -22,7 +22,7 @@
             <option value="english">영어</option>
           </select>
         </div>
-        <button type="button">로그인</button>
+        <a href="/" class="login-link">로그인</a>
       </div>
     </div>
   </header>
