--- a/mission-03/components/template/index.html
+++ b/mission-03/components/template/index.html
@@ -13,7 +13,7 @@
       <div class="header-inner">
         <h1 class="brand">
           <a href="/" class="logo-link">
-            <img src="./images/brand.svg" alt="NETFLIX" />
+            <img src="./../../images/brand.svg" alt="NETFLIX" />
           </a>
         </h1>
         <div class="menu">
@@ -23,7 +23,7 @@
               <option value="english">영어</option>
             </select>
           </div>
-          <button type="button">로그인</button>
+          <a href="/" class="login-link">로그인</a>
         </div>
       </div>
     </header>
