--- a/mission-03/components/footer/index.css
+++ b/mission-03/components/footer/index.css
@@ -91,3 +91,44 @@
     font-weight: 700;
   }
 }
+
+.selectbox {
+  position: relative;
+}
+.selectbox::before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 0.625em;
+  transform: translateY(-50%);
+  width: 1rem;
+  height: 1rem;
+  background: url(./../../images/global.svg) no-repeat center / contain;
+  z-index: -1;
+}
+.selectbox::after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 50%;
+  right: 0.625em;
+  transform: translateY(-50%);
+  width: 1rem;
+  height: 1rem;
+  background: url(./../../images/bi_caret-down-fill.svg) no-repeat center / contain;
+  z-index: -1;
+}
+select {
+  background-color: transparent;
+  color: var(--gray-500, #757575);
+  appearance: none;
+  padding: 0 2.125em;
+  border-radius: 2px;
+  border: 1px solid var(--gray-500, #757575);
+  font-size: 1rem;
+  line-height: 2.5625em;
+}
+select:focus {border-radius: 2px;
+  outline: 3px solid var(--green-500, #2EDE75);
+}
