--- a/mission-03/components/header/index.css
+++ b/mission-03/components/header/index.css
@@ -9,7 +9,6 @@
   flex-flow: row nowrap;
   justify-content: space-between;
   align-items: center;
-  height: 3.75em;
 }
 .menu {
   display: flex;
@@ -20,11 +19,6 @@
 
 @media (min-width: 768px) {
   .header {
-    box-shadow: 0px 1px 1px 0 var(--shadow-type-3);
-    position: sticky;
-    top: 0;
-    left: 0;
-    right: 0;
     padding: 2.5em 1.5625em;
   }
   .header-inner {
@@ -34,5 +28,43 @@
   .menu {
     column-gap: 1.625em;
     padding: 0.625em 0;
+  }
+}
+
+.menu .selectbox select {
+  line-height: 1.75em;
+}
+@media (min-width: 768px) {
+  .menu .selectbox select {
+    font-size: 1.1875em;
+    line-height: 2em;
+  }
+}
+
+.login-link {
+  border-radius: 0.25em;
+  background: var(--red-500, #E50914);
+  padding: 0 1.25em;
+  border: 0;
+  color: var(--White, #FFF);
+  font-weight: 700;
+  font-size: 0.75em;
+  line-height: 2.5em;
+}
+.login-link:hover {
+  background: var(--red-600, #B70710);
+}
+.login-link:focus {
+  outline: 3px solid var(--green-400, #58E590);
+  background: var(--red-500, #E50914);
+}
+.login-link:disabled {
+  background: var(--gray-500, #757575);
+}
+@media (min-width: 768px) {
+  .login-link {
+    padding: 0 1.25em;
+    font-size: 1em;
+    line-height: 2.5em;
   }
 }
