--- a/mission-03/components/template/index.css
+++ b/mission-03/components/template/index.css
@@ -1,3 +1,7 @@
+body {
+  background: var(--black) url(./../../images/background.png) no-repeat 50% 0 / contain;
+}
+
 .container {
   display: flex;
   flex-flow: column nowrap;
@@ -6,4 +10,5 @@
 
 .main {
   flex-grow: 1;
+  padding: 1.25em 1.125em;
 }
