--- a/mission-03/components/header/index.css
+++ b/mission-03/components/header/index.css
@@ -3,6 +3,7 @@
   line-height: 1;
   padding: 1.25em 1.5625em;
   background: var(--gradients-100, linear-gradient(180deg, #000 0%, rgba(0, 0, 0, 0.00) 100%));
+  z-index: 1;
 }
 .header-inner {
   display: flex;
