--- a/mission-03/components/logo/index.html
+++ b/mission-03/components/logo/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <a href="/" class="logo-link">
-        <img src="/images/brand.svg" alt="NETFLIX" />
+        <img src="/home-work/mission-03/images/brand.svg" alt="NETFLIX" />
     </a>
 </body>
 </html>
